--- a/client/src/App.css
+++ b/client/src/App.css
@@ -111,8 +111,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 12px 0;
-  margin-bottom: 8px;
+  gap: 64px;
+  padding: 32px 0;
+  margin-bottom: 24px;
+  margin-top: 24px;
   position: relative;
 }
 
