--- a/client/src/components/Dice.module.css
+++ b/client/src/components/Dice.module.css
@@ -3,6 +3,7 @@
   transform-style: preserve-3d;
   transform: rotateX(-60deg) rotateY(45deg);
   padding: 16px;
+  position: relative;
 }
 
 /* Dice container */
